--- a/MediaPlayDemo/MediaPlayDemo.vcxproj
+++ b/MediaPlayDemo/MediaPlayDemo.vcxproj
@@ -99,8 +99,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)lib\MediaPlay\$(Platform)\$(Configuration)\;$(SolutionDir)lib\Arithmetic\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>MediaPlay.lib;Arithmetic.lib;</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)lib\MediaPlay\$(Platform)\$(Configuration)\;$(SolutionDir)lib\Arithmetic\$(Platform)\$(Configuration)\;$(SolutionDir)lib\JpegEncoder\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>MediaPlay.lib;Arithmetic.lib;JpegEncoder.lib;</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
