Add live stream

--- a/MediaPlay/MediaPlay.vcxproj
+++ b/MediaPlay/MediaPlay.vcxproj
@@ -168,6 +168,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\error.h" />
     <ClInclude Include="..\include\MediaData\MediaData.h" />
     <ClInclude Include="..\include\MediaFilter\Callback\AVDataCallbackFilter.h" />
+    <ClInclude Include="..\include\MediaFilter\Capture\AVCaptureFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Controller\AVPlayControllerFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Decoder\AVDecoderFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Demuxer\AVDemuxerFilter.h" />
@@ -176,14 +177,19 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaFilter\Renderer\AVRendererFilter.h" />
     <ClInclude Include="..\include\MediaFilter\SourceMediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\TargetMediaFilter.h" />
-    <ClInclude Include="..\include\MediaGraph\FFmpeg\FFmpegPlaybackMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\AVPlayMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\LivestreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\MediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\PlaybackMediaGraph.h" />
+    <ClInclude Include="..\include\MediaModel\Capture\Hikvision\HikvisionSDKCapture.h" />
+    <ClInclude Include="..\include\MediaModel\Capture\MediaCapture.h" />
     <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.h" />
     <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegVideoDecoder.h" />
     <ClInclude Include="..\include\MediaModel\Decoder\MediaDecoder.h" />
     <ClInclude Include="..\include\MediaModel\Demuxer\FFmpeg\FFmpegLocalFileDemuxer.h" />
     <ClInclude Include="..\include\MediaModel\Demuxer\MediaDemuxer.h" />
+    <ClInclude Include="..\include\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.h" />
+    <ClInclude Include="..\include\MediaModel\Formatter\MediaFormatter.h" />
     <ClInclude Include="..\include\MediaModel\MediaModel.h" />
     <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3D.h" />
     <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DDevice.h" />
@@ -218,6 +224,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_pe.cpp" />
     <ClCompile Include="..\source\MediaData\MediaData.cpp" />
     <ClCompile Include="..\source\MediaFilter\Callback\AVDataCallbackFilter.cpp" />
+    <ClCompile Include="..\source\MediaFilter\Capture\AVCaptureFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Controller\AVPlayControllerFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Decoder\AVDecoderFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Demuxer\AVDemuxerFilter.cpp" />
@@ -226,14 +233,19 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\source\MediaFilter\Renderer\AVRendererFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\SourceMediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\TargetMediaFilter.cpp" />
-    <ClCompile Include="..\source\MediaGraph\FFmpeg\FFmpegPlaybackMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\AVPlayMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\LivestreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\MediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\PlaybackMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaModel\Capture\Hikvision\HikvisionSDKCapture.cpp" />
+    <ClCompile Include="..\source\MediaModel\Capture\MediaCapture.cpp" />
     <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.cpp" />
     <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegVideoDecoder.cpp" />
     <ClCompile Include="..\source\MediaModel\Decoder\MediaDecoder.cpp" />
     <ClCompile Include="..\source\MediaModel\Demuxer\FFmpeg\FFmpegLocalFileDemuxer.cpp" />
     <ClCompile Include="..\source\MediaModel\Demuxer\MediaDemuxer.cpp" />
+    <ClCompile Include="..\source\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.cpp" />
+    <ClCompile Include="..\source\MediaModel\Formatter\MediaFormatter.cpp" />
     <ClCompile Include="..\source\MediaModel\MediaModel.cpp" />
     <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3D.cpp" />
     <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DDevice.cpp" />
