--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /bin/
 /Arithmetic/x64/
 /ConsoleApplication1/x64/
-JpegEncoder/x64/
-MediaPlay/x64/
-MediaPlayDemo/x64/
-arithmetic-server/x64/
+/JpegEncoder/x64/
+/MediaPlay/x64/
+/MediaPlayDemo/x64/
+/arithmetic-server/x64/
