--- a/MediaPlay/MediaPlay.vcxproj
+++ b/MediaPlay/MediaPlay.vcxproj
@@ -167,6 +167,8 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\DataStruct\UnorderedMap.h" />
     <ClInclude Include="..\include\error.h" />
     <ClInclude Include="..\include\MediaData\MediaData.h" />
+    <ClInclude Include="..\include\MediaDevice\EnableDeviceLoginAndLogout.h" />
+    <ClInclude Include="..\include\MediaDevice\Hikvision\HikvisionDevice.h" />
     <ClInclude Include="..\include\MediaDevice\MediaDevice.h" />
     <ClInclude Include="..\include\MediaFilter\Callback\AVDataCallbackFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Capture\AVCaptureFilter.h" />
@@ -187,6 +189,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.h" />
     <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegVideoDecoder.h" />
     <ClInclude Include="..\include\MediaModel\Decoder\MediaDecoder.h" />
+    <ClInclude Include="..\include\MediaModel\Decoder\SDK\HikvisionSDKDecoder.h" />
     <ClInclude Include="..\include\MediaModel\Demuxer\FFmpeg\FFmpegLocalFileDemuxer.h" />
     <ClInclude Include="..\include\MediaModel\Demuxer\MediaDemuxer.h" />
     <ClInclude Include="..\include\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.h" />
@@ -224,6 +227,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_dll.cpp" />
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_pe.cpp" />
     <ClCompile Include="..\source\MediaData\MediaData.cpp" />
+    <ClCompile Include="..\source\MediaDevice\Hikvision\HikvisionDevice.cpp" />
     <ClCompile Include="..\source\MediaDevice\MediaDevice.cpp" />
     <ClCompile Include="..\source\MediaFilter\Callback\AVDataCallbackFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Capture\AVCaptureFilter.cpp" />
@@ -244,6 +248,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.cpp" />
     <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegVideoDecoder.cpp" />
     <ClCompile Include="..\source\MediaModel\Decoder\MediaDecoder.cpp" />
+    <ClCompile Include="..\source\MediaModel\Decoder\SDK\HikvisionSDKDecoder.cpp" />
     <ClCompile Include="..\source\MediaModel\Demuxer\FFmpeg\FFmpegLocalFileDemuxer.cpp" />
     <ClCompile Include="..\source\MediaModel\Demuxer\MediaDemuxer.cpp" />
     <ClCompile Include="..\source\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.cpp" />
