--- a/MediaPlay/MediaPlay.vcxproj
+++ b/MediaPlay/MediaPlay.vcxproj
@@ -174,16 +174,15 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaFilter\Capture\AVCaptureFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Controller\AVPlayControllerFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Decoder\AVDecoderFilter.h" />
-    <ClInclude Include="..\include\MediaFilter\Demuxer\AVDemuxerFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Formatter\ImageFormatterFilter.h" />
     <ClInclude Include="..\include\MediaFilter\MediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Renderer\AVRendererFilter.h" />
     <ClInclude Include="..\include\MediaFilter\SourceMediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\TargetMediaFilter.h" />
-    <ClInclude Include="..\include\MediaGraph\AVPlayMediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\LivestreamMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\FoundationalMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\SDKStreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\MediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\PlaybackMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\StandardStreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaModel\Capture\Hikvision\HikvisionSDKCapture.h" />
     <ClInclude Include="..\include\MediaModel\Capture\MediaCapture.h" />
     <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.h" />
@@ -208,6 +207,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaPin\MediaPin.h" />
     <ClInclude Include="..\include\MediaPin\OutputMediaPin.h" />
     <ClInclude Include="..\include\predef.h" />
+    <ClInclude Include="..\include\Url\Url.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MediaPlay.h" />
     <ClInclude Include="pch.h" />
@@ -233,16 +233,15 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\source\MediaFilter\Capture\AVCaptureFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Controller\AVPlayControllerFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Decoder\AVDecoderFilter.cpp" />
-    <ClCompile Include="..\source\MediaFilter\Demuxer\AVDemuxerFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Formatter\ImageFormatterFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\MediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Renderer\AVRendererFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\SourceMediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\TargetMediaFilter.cpp" />
-    <ClCompile Include="..\source\MediaGraph\AVPlayMediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\LivestreamMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\FoundationalMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\SDKStreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\MediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\PlaybackMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\StandardStreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaModel\Capture\Hikvision\HikvisionSDKCapture.cpp" />
     <ClCompile Include="..\source\MediaModel\Capture\MediaCapture.cpp" />
     <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.cpp" />
@@ -266,6 +265,7 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\source\MediaPin\InputMediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\MediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\OutputMediaPin.cpp" />
+    <ClCompile Include="..\source\Url\Url.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="MediaPlay.cpp" />
     <ClCompile Include="pch.cpp">
