--- a/MediaPlay/MediaPlay.vcxproj.filters
+++ b/MediaPlay/MediaPlay.vcxproj.filters
@@ -31,9 +31,6 @@
     <Filter Include="Source Files\Pin">
       <UniqueIdentifier>{74da9b22-6003-4402-9b78-7651664bec2c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Filter\Demuxer">
-      <UniqueIdentifier>{cd6823cc-4f61-4542-9154-8d614454e85a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Filter\Controller">
       <UniqueIdentifier>{23aa5f42-e5b4-45e1-a599-58c97e12fd76}</UniqueIdentifier>
     </Filter>
@@ -115,9 +112,6 @@
     <Filter Include="Source Files\Filter\Callback">
       <UniqueIdentifier>{a2b2da77-a58b-4fba-b90e-3c802e86505c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Filter\Demuxer">
-      <UniqueIdentifier>{1ad1ee21-9ce0-4f09-b3c7-d9aa30b7ab25}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Model\Renderer">
       <UniqueIdentifier>{bf84b857-99a2-4aa8-87ad-9b0078dfb30f}</UniqueIdentifier>
     </Filter>
@@ -184,6 +178,12 @@
     <Filter Include="Header Files\Model\Decoder\SDK">
       <UniqueIdentifier>{192be101-ddc8-46be-ac8f-0936acd5c374}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Url">
+      <UniqueIdentifier>{15079fed-cbc5-484d-8ec3-fe5dfdc5e0a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Url">
+      <UniqueIdentifier>{c1b065a0-02b2-41b5-b6d0-35cc832b5a5f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -206,9 +206,6 @@
     </ClInclude>
     <ClInclude Include="..\include\MediaFilter\TargetMediaFilter.h">
       <Filter>Header Files\Filter</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaFilter\Demuxer\AVDemuxerFilter.h">
-      <Filter>Header Files\Filter\Demuxer</Filter>
     </ClInclude>
     <ClInclude Include="..\include\MediaFilter\Controller\AVPlayControllerFilter.h">
       <Filter>Header Files\Filter\Controller</Filter>
@@ -236,9 +233,6 @@
     </ClInclude>
     <ClInclude Include="..\include\predef.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaGraph\PlaybackMediaGraph.h">
-      <Filter>Header Files\Graph</Filter>
     </ClInclude>
     <ClInclude Include="..\include\MediaModel\MediaModel.h">
       <Filter>Header Files\Model</Filter>
@@ -303,12 +297,6 @@
     <ClInclude Include="..\include\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.h">
       <Filter>Header Files\Model\Formatter\FFmpeg</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\MediaGraph\LivestreamMediaGraph.h">
-      <Filter>Header Files\Graph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaGraph\AVPlayMediaGraph.h">
-      <Filter>Header Files\Graph</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\MediaModel\Capture\Hikvision\HikvisionSDKCapture.h">
       <Filter>Header Files\Model\Capture\Hikvision</Filter>
     </ClInclude>
@@ -329,6 +317,18 @@
     </ClInclude>
     <ClInclude Include="..\include\MediaModel\Decoder\SDK\HikvisionSDKDecoder.h">
       <Filter>Header Files\Model\Decoder\SDK</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MediaGraph\FoundationalMediaGraph.h">
+      <Filter>Header Files\Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MediaGraph\StandardStreamMediaGraph.h">
+      <Filter>Header Files\Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MediaGraph\SDKStreamMediaGraph.h">
+      <Filter>Header Files\Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Url\Url.h">
+      <Filter>Header Files\Url</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -352,9 +352,6 @@
     </ClCompile>
     <ClCompile Include="..\source\MediaFilter\TargetMediaFilter.cpp">
       <Filter>Source Files\Filter</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaFilter\Demuxer\AVDemuxerFilter.cpp">
-      <Filter>Source Files\Filter\Demuxer</Filter>
     </ClCompile>
     <ClCompile Include="..\source\MediaFilter\Controller\AVPlayControllerFilter.cpp">
       <Filter>Source Files\Filter\Controller</Filter>
@@ -388,9 +385,6 @@
     </ClCompile>
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_pe.cpp">
       <Filter>Source Files\boost\thread</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaGraph\PlaybackMediaGraph.cpp">
-      <Filter>Source Files\Graph</Filter>
     </ClCompile>
     <ClCompile Include="..\source\MediaModel\MediaModel.cpp">
       <Filter>Source Files\Model</Filter>
@@ -476,12 +470,6 @@
     <ClCompile Include="..\source\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.cpp">
       <Filter>Source Files\Model\Formatter\FFmpeg</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\MediaGraph\AVPlayMediaGraph.cpp">
-      <Filter>Source Files\Graph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaGraph\LivestreamMediaGraph.cpp">
-      <Filter>Source Files\Graph</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\MediaModel\Capture\Hikvision\HikvisionSDKCapture.cpp">
       <Filter>Source Files\Model\Capture\Hikvision</Filter>
     </ClCompile>
@@ -499,6 +487,18 @@
     </ClCompile>
     <ClCompile Include="..\source\MediaModel\Decoder\SDK\HikvisionSDKDecoder.cpp">
       <Filter>Source Files\Model\Decoder\SDK</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MediaGraph\FoundationalMediaGraph.cpp">
+      <Filter>Source Files\Graph</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MediaGraph\SDKStreamMediaGraph.cpp">
+      <Filter>Source Files\Graph</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MediaGraph\StandardStreamMediaGraph.cpp">
+      <Filter>Source Files\Graph</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\Url\Url.cpp">
+      <Filter>Source Files\Url</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
